ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Zorgt voor HTTPS-omleiding
spec:
  tls:
  - hosts:
    - wiki.cloudops-xx.ucll.cloud
    secretName: wiki-tls-secret  # Je TLS-secret
  rules:
  - host: wiki.cloudops-xx.ucll.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki  # Naam van je WikiJS-service
            port:
              number: 3000  # Poort waarop WikiJS draait
